# progammieren_2_aufgabe_2-4

./: README.md  advanced_powercurve.py  ekgdata.py  interactive_plot.py  main.py  person.py  pyproject.toml  read_data.py  read_pandas.py  readme_pc.md
