[project]
name = "progammieren_2_aufgabe_2-4"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marc", email = "wm2041@mci4me.at"},
]
dependencies = ["streamlit>=1.57.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
